{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 44,
  "lineage": "1fee6c2b-0823-64db-55e2-bbe371ca92b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:internet-gateway/igw-0fafcc8b50df9557b",
            "id": "igw-0fafcc8b50df9557b",
            "owner_id": "316348991289",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-igw"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-igw",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:loadbalancer/app/portal-citas-demo-alb/8c44d279e04143d0",
            "arn_suffix": "app/portal-citas-demo-alb/8c44d279e04143d0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "portal-citas-demo-alb-1044193803.eu-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:loadbalancer/app/portal-citas-demo-alb/8c44d279e04143d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portal-citas-demo-alb",
            "preserve_host_header": false,
            "region": "eu-south-2",
            "security_groups": [
              "sg-0b5442b4da435fa14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005de1dbe93754ecf"
              },
              {
                "subnet_id": "subnet-016ccdadf1616f822"
              }
            ],
            "subnets": [
              "subnet-005de1dbe93754ecf",
              "subnet-016ccdadf1616f822"
            ],
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0956581394HF5D5LXGAP"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:loadbalancer/app/portal-citas-demo-alb/8c44d279e04143d0"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:listener/app/portal-citas-demo-alb/8c44d279e04143d0/4b1858e8ed0d44f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:targetgroup/portal-citas-demo-tg/b7419dec83089335",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:listener/app/portal-citas-demo-alb/8c44d279e04143d0/4b1858e8ed0d44f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:loadbalancer/app/portal-citas-demo-alb/8c44d279e04143d0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-south-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:listener/app/portal-citas-demo-alb/8c44d279e04143d0/4b1858e8ed0d44f1"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:targetgroup/portal-citas-demo-tg/b7419dec83089335",
            "arn_suffix": "targetgroup/portal-citas-demo-tg/b7419dec83089335",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:targetgroup/portal-citas-demo-tg/b7419dec83089335",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-south-2:316348991289:loadbalancer/app/portal-citas-demo-alb/8c44d279e04143d0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portal-citas-demo-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-south-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:316348991289:targetgroup/portal-citas-demo-tg/b7419dec83089335"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fafcc8b50df9557b",
            "id": "r-rtb-0cd899d957b2d74e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-south-2",
            "route_table_id": "rtb-0cd899d957b2d74e6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-south-2",
            "route_table_id": "rtb-0cd899d957b2d74e6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:route-table/rtb-0cd899d957b2d74e6",
            "id": "rtb-0cd899d957b2d74e6",
            "owner_id": "316348991289",
            "propagating_vgws": [],
            "region": "eu-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fafcc8b50df9557b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portal-citas-demo-rt-public"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-rt-public",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "rtb-0cd899d957b2d74e6",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05413a02ce1eaa2f8",
            "region": "eu-south-2",
            "route_table_id": "rtb-0cd899d957b2d74e6",
            "subnet_id": "subnet-005de1dbe93754ecf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac1a15ffd20fec5d",
            "region": "eu-south-2",
            "route_table_id": "rtb-0cd899d957b2d74e6",
            "subnet_id": "subnet-016ccdadf1616f822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:security-group/sg-0b5442b4da435fa14",
            "description": "ALB SG - inbound from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5442b4da435fa14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "portal-citas-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "316348991289",
            "region": "eu-south-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "sg-0b5442b4da435fa14",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:security-group/sg-0ff3c33ab41449c35",
            "description": "ECS SG - only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound (needed to reach AWS APIs, RDS, etc.)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff3c33ab41449c35",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5442b4da435fa14"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "portal-citas-demo-ecs-sg",
            "name_prefix": "",
            "owner_id": "316348991289",
            "region": "eu-south-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "sg-0ff3c33ab41449c35",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:security-group/sg-0b01b16aba1b26537",
            "description": "RDS SG - only from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b01b16aba1b26537",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from ECS tasks",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff3c33ab41449c35"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "portal-citas-demo-rds-sg",
            "name_prefix": "",
            "owner_id": "316348991289",
            "region": "eu-south-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "demo",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "sg-0b01b16aba1b26537",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:subnet/subnet-07849d6dced2de3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.20.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07849d6dced2de3f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316348991289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-private-1"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-private-1",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "subnet-07849d6dced2de3f6",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:subnet/subnet-0e60bd73b5ccd8de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e60bd73b5ccd8de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "316348991289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-private-2"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-private-2",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "subnet-0e60bd73b5ccd8de5",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:subnet/subnet-005de1dbe93754ecf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005de1dbe93754ecf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316348991289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-public-1"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-public-1",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "subnet-005de1dbe93754ecf",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:subnet/subnet-016ccdadf1616f822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ccdadf1616f822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316348991289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-public-2"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-public-2",
              "Owner": "equipo",
              "Project": "portal-citas"
            },
            "vpc_id": "vpc-03a5f31f2cede8bb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "subnet-016ccdadf1616f822",
            "region": "eu-south-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:316348991289:vpc/vpc-03a5f31f2cede8bb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-06b72c1014b0aefe0",
            "default_route_table_id": "rtb-07b6355edbd838198",
            "default_security_group_id": "sg-0e1ab8597ee14b736",
            "dhcp_options_id": "dopt-0f9801cbb6de15311",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a5f31f2cede8bb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b6355edbd838198",
            "owner_id": "316348991289",
            "region": "eu-south-2",
            "tags": {
              "Name": "portal-citas-demo-vpc"
            },
            "tags_all": {
              "Env": "demo",
              "Name": "portal-citas-demo-vpc",
              "Owner": "equipo",
              "Project": "portal-citas"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "316348991289",
            "id": "vpc-03a5f31f2cede8bb3",
            "region": "eu-south-2"
          }
        }
      ]
    }
  ]
}